src/test/resources/typeSystemTestModels/invalid/expressions/LogicalNot.java
package typeSystemTestModels.invalid.expressions;

public class LogicalNot {
  boolean b = !1;
}